--- a/app/src/main/res/layout/activity_home_employee.xml
+++ b/app/src/main/res/layout/activity_home_employee.xml
@@ -16,10 +16,10 @@
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.022" />
+        app:layout_constraintVertical_bias="0.094" />
 
     <TextView
         android:id="@+id/textView2"
@@ -34,7 +34,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/textHomeEmployeeTop"
         app:layout_constraintTop_toBottomOf="@+id/textHomeEmployeeTop"
-        app:layout_constraintVertical_bias="0.026" />
+        app:layout_constraintVertical_bias="0.053" />
 
     <Button
         android:id="@+id/btnHomeEmployeeModifyCV"
@@ -83,4 +83,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.924" />
+
+    <Button
+        android:id="@+id/backbuttonHomeEmployee"
+        android:layout_width="125dp"
+        android:layout_height="46dp"
+        android:text="BACK"
+        android:textSize="14sp"
+        app:icon="@android:drawable/ic_menu_revert"
+        app:layout_constraintBottom_toTopOf="@+id/textHomeEmployeeTop"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.055"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.8" />
 </androidx.constraintlayout.widget.ConstraintLayout>
