--- a/app/src/main/res/layout/activity_manage_job_positions.xml
+++ b/app/src/main/res/layout/activity_manage_job_positions.xml
@@ -7,8 +7,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewManageJobPositions"
-        android:layout_width="345dp"
-        android:layout_height="470dp"
+        android:layout_width="343dp"
+        android:layout_height="410dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="24dp"
@@ -35,13 +35,12 @@
         android:id="@+id/textView11"
         android:layout_width="309dp"
         android:layout_height="80dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="60dp"
         android:text="Job Positions Overview"
         android:textAlignment="center"
         android:textSize="34sp"
         android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -55,4 +54,18 @@
         android:textStyle="italic"
         app:layout_constraintStart_toStartOf="@+id/btnManageJobPositionsAddJob"
         app:layout_constraintTop_toBottomOf="@+id/btnManageJobPositionsAddJob" />
+
+    <Button
+        android:id="@+id/backbuttonMangeJobPositions"
+        android:layout_width="115dp"
+        android:layout_height="51dp"
+        android:layout_marginTop="8dp"
+        android:text="BACK"
+        app:icon="@android:drawable/ic_menu_revert"
+        app:layout_constraintBottom_toTopOf="@+id/textView11"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.054"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
