--- a/app/src/main/res/layout/activity_edit_account_employee.xml
+++ b/app/src/main/res/layout/activity_edit_account_employee.xml
@@ -6,144 +6,136 @@
     android:layout_height="match_parent"
     tools:context=".view.EditAccountEmployee.EditAccountEmployeeActivity">
 
-    <TextView
-        android:id="@+id/textView33"
-        android:layout_width="240dp"
-        android:layout_height="58dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:text="Edit your Employee Account:"
-        android:textAlignment="center"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <ScrollView
+        android:id="@+id/scrollView3"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="-51dp">
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/EditAccountEmpoyeeEmail"
-        android:layout_width="333dp"
-        android:layout_height="59dp"
-        android:layout_marginTop="52dp"
-        android:hint="Email"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.445"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView33"
-        app:layout_constraintVertical_bias="0.0" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/textView36"
-        android:layout_width="179dp"
-        android:layout_height="28dp"
-        android:layout_marginTop="16dp"
-        android:text="Email:"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/EditAccountEmpoyeeEmail"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.15"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView33"
-        app:layout_constraintVertical_bias="0.0" />
+            <Button
+                android:id="@+id/btnEditEmployeeAccountSave"
+                android:layout_width="133dp"
+                android:layout_height="74dp"
+                android:layout_marginTop="24dp"
+                android:text="Save"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="@+id/recyclerViewEditAccountEmployee"
+                app:layout_constraintTop_toBottomOf="@+id/recyclerViewEditAccountEmployee" />
 
-    <TextView
-        android:id="@+id/textView38"
-        android:layout_width="200dp"
-        android:layout_height="28dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginBottom="32dp"
-        android:text="Phone Number : "
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.17"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/EditAccountEmpoyeeEmail"
-        app:layout_constraintVertical_bias="0.027" />
+            <Button
+                android:id="@+id/btnEditEmployeeAccountDelete"
+                android:layout_width="129dp"
+                android:layout_height="72dp"
+                android:layout_marginTop="24dp"
+                android:text="Delete"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="@+id/recyclerViewEditAccountEmployee"
+                app:layout_constraintTop_toBottomOf="@+id/recyclerViewEditAccountEmployee" />
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/EditAccountEmployeePhoneNumber"
-        android:layout_width="328dp"
-        android:layout_height="63dp"
-        android:layout_marginTop="12dp"
-        android:hint="PhoneNumber"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.433"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView38" />
+            <TextView
+                android:id="@+id/textView33"
+                android:layout_width="240dp"
+                android:layout_height="58dp"
+                android:layout_marginStart="85dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="86dp"
+                android:text="Edit your Employee Account:"
+                android:textAlignment="center"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textView39"
-        android:layout_width="200dp"
-        android:layout_height="24dp"
-        android:layout_marginTop="12dp"
-        android:text="Paasword: "
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.17"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/EditAccountEmployeePhoneNumber" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/EditAccountEmpoyeeEmail"
+                android:layout_width="333dp"
+                android:layout_height="59dp"
+                android:layout_marginTop="8dp"
+                android:hint="Email"
+                app:layout_constraintStart_toStartOf="@+id/textView36"
+                app:layout_constraintTop_toBottomOf="@+id/textView36" />
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/EditAccountEmployeePassword"
-        android:layout_width="328dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="10dp"
-        android:hint="Password"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerViewEditAccountEmployee"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.418"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView39"
-        app:layout_constraintVertical_bias="0.0" />
+            <TextView
+                android:id="@+id/textView36"
+                android:layout_width="179dp"
+                android:layout_height="28dp"
+                android:layout_marginStart="35dp"
+                android:layout_marginTop="24dp"
+                android:text="Email:"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView33" />
 
-    <Button
-        android:id="@+id/EditAccountEmployeebtn"
-        android:layout_width="168dp"
-        android:layout_height="79dp"
-        android:layout_marginBottom="24dp"
-        android:text="SAVE CHANGES"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/EditAccountEmployeePassword"
-        app:layout_constraintVertical_bias="1.0" />
+            <TextView
+                android:id="@+id/textView38"
+                android:layout_width="200dp"
+                android:layout_height="28dp"
+                android:layout_marginTop="24dp"
+                android:text="Phone Number : "
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="@+id/EditAccountEmpoyeeEmail"
+                app:layout_constraintTop_toBottomOf="@+id/EditAccountEmpoyeeEmail" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewEditAccountEmployee"
-        android:layout_width="328dp"
-        android:layout_height="115dp"
-        android:layout_marginTop="108dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView39"
-        app:layout_constraintVertical_bias="0.158"
-        tools:itemCount="5" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/EditAccountEmployeePhoneNumber"
+                android:layout_width="328dp"
+                android:layout_height="63dp"
+                android:layout_marginTop="10dp"
+                android:hint="PhoneNumber"
+                app:layout_constraintStart_toStartOf="@+id/textView38"
+                app:layout_constraintTop_toBottomOf="@+id/textView38" />
 
-    <TextView
-        android:id="@+id/textView40"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Employee Applications:"
-        android:textAlignment="center"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerViewEditAccountEmployee"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.185"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/EditAccountEmployeePassword"
-        app:layout_constraintVertical_bias="0.571" />
+            <TextView
+                android:id="@+id/textView39"
+                android:layout_width="200dp"
+                android:layout_height="24dp"
+                android:layout_marginTop="24dp"
+                android:text="Password: "
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="@+id/EditAccountEmployeePhoneNumber"
+                app:layout_constraintTop_toBottomOf="@+id/EditAccountEmployeePhoneNumber" />
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/EditAccountEmployeePassword"
+                android:layout_width="328dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="8dp"
+                android:hint="Password"
+                app:layout_constraintStart_toStartOf="@+id/textView39"
+                app:layout_constraintTop_toBottomOf="@+id/textView39" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerViewEditAccountEmployee"
+                android:layout_width="328dp"
+                android:layout_height="115dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintStart_toStartOf="@+id/textView40"
+                app:layout_constraintTop_toBottomOf="@+id/textView40"
+                tools:itemCount="5" />
+
+            <TextView
+                android:id="@+id/textView40"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:text="Employee Applications:"
+                android:textAlignment="center"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="@+id/EditAccountEmployeePassword"
+                app:layout_constraintTop_toBottomOf="@+id/EditAccountEmployeePassword" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
