--- a/app/src/main/res/layout/activity_edit_account_employer.xml
+++ b/app/src/main/res/layout/activity_edit_account_employer.xml
@@ -56,7 +56,7 @@
                 android:layout_marginTop="10dp"
                 android:ems="10"
                 android:hint="A strong password"
-                android:inputType="textPassword"
+                android:inputType="text"
                 android:textStyle="italic"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
