--- a/app/src/main/res/layout/activity_home_employee.xml
+++ b/app/src/main/res/layout/activity_home_employee.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".view.HomeEmployee.HomeEmployeeActivity">
 
+    <Button
+        android:id="@+id/logoutbuttonHomeEmployee"
+        android:layout_width="275dp"
+        android:layout_height="115dp"
+        android:layout_marginTop="20dp"
+        android:text="Log Out"
+        android:textSize="38sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/btnHomeEmployeeEditAccount"
+        app:layout_constraintStart_toStartOf="@+id/btnHomeEmployeeEditAccount"
+        app:layout_constraintTop_toBottomOf="@+id/btnHomeEmployeeEditAccount" />
+
     <TextView
         android:id="@+id/textHomeEmployeeTop"
         android:layout_width="292dp"
@@ -39,62 +51,44 @@
     <Button
         android:id="@+id/btnHomeEmployeeModifyCV"
         android:layout_width="275dp"
-        android:layout_height="120dp"
+        android:layout_height="115dp"
+        android:layout_marginTop="30dp"
         android:text="Modify your CV"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textSize="38sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.075"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.364" />
+        app:layout_constraintEnd_toEndOf="@+id/textView2"
+        app:layout_constraintStart_toStartOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <Button
         android:id="@+id/btnHomeEmployeeSearchJobs"
         android:layout_width="278dp"
         android:layout_height="115dp"
+        android:layout_marginTop="20dp"
         android:text="Search For Jobs"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textSize="38sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.947"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.636" />
+        app:layout_constraintEnd_toEndOf="@+id/btnHomeEmployeeModifyCV"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/btnHomeEmployeeModifyCV"
+        app:layout_constraintTop_toBottomOf="@+id/btnHomeEmployeeModifyCV" />
 
     <Button
         android:id="@+id/btnHomeEmployeeEditAccount"
         android:layout_width="279dp"
         android:layout_height="115dp"
+        android:layout_marginTop="20dp"
         android:text="Edit your Account"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textSize="38sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.075"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.924" />
+        app:layout_constraintEnd_toEndOf="@+id/btnHomeEmployeeSearchJobs"
+        app:layout_constraintStart_toStartOf="@+id/btnHomeEmployeeSearchJobs"
+        app:layout_constraintTop_toBottomOf="@+id/btnHomeEmployeeSearchJobs" />
 
-    <Button
-        android:id="@+id/backbuttonHomeEmployee"
-        android:layout_width="125dp"
-        android:layout_height="46dp"
-        android:text="BACK"
-        android:textSize="14sp"
-        app:icon="@android:drawable/ic_menu_revert"
-        app:layout_constraintBottom_toTopOf="@+id/textHomeEmployeeTop"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.055"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.8" />
 </androidx.constraintlayout.widget.ConstraintLayout>
