--- a/app/src/main/res/layout/activity_home_employer.xml
+++ b/app/src/main/res/layout/activity_home_employer.xml
@@ -7,51 +7,46 @@
 
     <Button
         android:id="@+id/btnHomeEmployerEditAccount"
-        android:layout_width="279dp"
+        android:layout_width="275dp"
         android:layout_height="115dp"
+        android:layout_marginTop="20dp"
         android:text="Edit your Account"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textSize="38sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.075"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.924" />
+        app:layout_constraintEnd_toEndOf="@+id/btnHomeEmployerUpdateJobApplications"
+        app:layout_constraintStart_toStartOf="@+id/btnHomeEmployerUpdateJobApplications"
+        app:layout_constraintTop_toBottomOf="@+id/btnHomeEmployerUpdateJobApplications" />
 
     <Button
         android:id="@+id/btnHomeEmployerUpdateJobApplications"
-        android:layout_width="278dp"
+        android:layout_width="275dp"
         android:layout_height="115dp"
+        android:layout_marginTop="20dp"
         android:text="Update Job Applications"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textSize="38sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.947"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.636" />
+        app:layout_constraintEnd_toEndOf="@+id/btnHomeEmployerManageJobPositions"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/btnHomeEmployerManageJobPositions"
+        app:layout_constraintTop_toBottomOf="@+id/btnHomeEmployerManageJobPositions" />
 
     <Button
         android:id="@+id/btnHomeEmployerManageJobPositions"
         android:layout_width="275dp"
-        android:layout_height="120dp"
+        android:layout_height="115dp"
+        android:layout_marginTop="30dp"
         android:text="Manage Job Positions"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textSize="38sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.075"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.364" />
+        app:layout_constraintEnd_toEndOf="@+id/textView3"
+        app:layout_constraintStart_toStartOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <TextView
         android:id="@+id/textHomeEmployerTop"
@@ -82,16 +77,14 @@
         app:layout_constraintTop_toBottomOf="@+id/textHomeEmployerTop" />
 
     <Button
-        android:id="@+id/backbuttonHomeEmployer"
-        android:layout_width="135dp"
-        android:layout_height="46dp"
-        android:text="BACK"
-        android:textSize="14sp"
-        app:icon="@android:drawable/ic_menu_revert"
-        app:layout_constraintBottom_toTopOf="@+id/textHomeEmployerTop"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.053"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        android:id="@+id/logoutbuttonHomeEmployer"
+        android:layout_width="275dp"
+        android:layout_height="115dp"
+        android:layout_marginTop="20dp"
+        android:text="Log Out"
+        android:textSize="38sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/btnHomeEmployerEditAccount"
+        app:layout_constraintStart_toStartOf="@+id/btnHomeEmployerEditAccount"
+        app:layout_constraintTop_toBottomOf="@+id/btnHomeEmployerEditAccount" />
 </androidx.constraintlayout.widget.ConstraintLayout>
