--- a/app/src/main/res/layout/activity_add_new_language_knowledge.xml
+++ b/app/src/main/res/layout/activity_add_new_language_knowledge.xml
@@ -75,13 +75,26 @@
         android:id="@+id/textView38"
         android:layout_width="342dp"
         android:layout_height="81dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="60dp"
         android:text="Add a new Language Knowledge to your CV"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/backbuttonAddNewLanguageKnowledge"
+        android:layout_width="133dp"
+        android:layout_height="54dp"
+        android:text="BACK"
+        app:icon="@android:drawable/ic_menu_revert"
+        app:layout_constraintBottom_toTopOf="@+id/textView38"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.057"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
