--- a/app/src/main/res/layout/activity_modify_cv_edit_work_experience.xml
+++ b/app/src/main/res/layout/activity_modify_cv_edit_work_experience.xml
@@ -8,8 +8,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewModifyCVEditWorkExperience"
-        android:layout_width="353dp"
-        android:layout_height="547dp"
+        android:layout_width="347dp"
+        android:layout_height="504dp"
         android:layout_marginTop="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.482"
@@ -20,7 +20,7 @@
         android:id="@+id/textView18"
         android:layout_width="362dp"
         android:layout_height="79dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="64dp"
         android:text="Edit Your Work Experience"
         android:textAlignment="center"
         android:textSize="34sp"
@@ -50,4 +50,18 @@
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textView28"
         app:layout_constraintTop_toBottomOf="@+id/textView18" />
+
+    <Button
+        android:id="@+id/backbuttonModifyCVEditWorkExperience"
+        android:layout_width="112dp"
+        android:layout_height="51dp"
+        android:layout_marginBottom="8dp"
+        android:text="BACK"
+        app:icon="@android:drawable/ic_menu_revert"
+        app:layout_constraintBottom_toTopOf="@+id/textView18"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.02"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
