--- a/app/src/main/res/layout/activity_show_job_details.xml
+++ b/app/src/main/res/layout/activity_show_job_details.xml
@@ -21,7 +21,7 @@
                 android:id="@+id/textView9"
                 android:layout_width="295dp"
                 android:layout_height="43dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="60dp"
                 android:text="Job Details"
                 android:textAlignment="center"
                 android:textSize="34sp"
@@ -202,6 +202,19 @@
                 android:inputType="text"
                 app:layout_constraintStart_toStartOf="@+id/textView26"
                 app:layout_constraintTop_toBottomOf="@+id/textView26" />
+
+            <Button
+                android:id="@+id/backbuttonShowJobDetails"
+                android:layout_width="122dp"
+                android:layout_height="48dp"
+                android:text="BACK"
+                app:icon="@android:drawable/ic_menu_revert"
+                app:layout_constraintBottom_toTopOf="@+id/textView9"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="1.0" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
