--- a/app/src/main/res/layout/activity_add_new_education.xml
+++ b/app/src/main/res/layout/activity_add_new_education.xml
@@ -10,12 +10,12 @@
         android:id="@+id/textView41"
         android:layout_width="342dp"
         android:layout_height="81dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="76dp"
         android:text="Add a new Education to your CV"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -32,7 +32,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinnerAddNewEducationSelectLevelOfStudies"
-        app:layout_constraintVertical_bias="0.804" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/btnAddNewEducation"
@@ -85,4 +85,17 @@
         android:layout_marginTop="24dp"
         app:layout_constraintStart_toStartOf="@+id/textView61"
         app:layout_constraintTop_toBottomOf="@+id/textView61" />
+
+    <Button
+        android:id="@+id/backbuttonAddNewEducation"
+        android:layout_width="117dp"
+        android:layout_height="50dp"
+        android:text="BACK"
+        app:icon="@android:drawable/ic_menu_revert"
+        app:layout_constraintBottom_toTopOf="@+id/textView41"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.054"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.615" />
 </androidx.constraintlayout.widget.ConstraintLayout>
