--- a/app/src/main/res/layout/activity_change_work_experience_details.xml
+++ b/app/src/main/res/layout/activity_change_work_experience_details.xml
@@ -32,14 +32,16 @@
         android:id="@+id/textView31"
         android:layout_width="342dp"
         android:layout_height="81dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="64dp"
         android:text="Change Existing Work Experience Details"
         android:textSize="34sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/textView34"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.463"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.021" />
 
     <Spinner
         android:id="@+id/spinnerChangeWorkExperienceDetailsSelectExpField"
@@ -89,4 +91,17 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/editTextChangeWorkingExperienceDetailsDescription"
         app:layout_constraintTop_toBottomOf="@+id/editTextChangeWorkingExperienceDetailsDescription" />
+
+    <Button
+        android:id="@+id/backbuttonChangeWorkExperienceDetails"
+        android:layout_width="124dp"
+        android:layout_height="59dp"
+        android:text="BACK"
+        app:icon="@android:drawable/ic_menu_revert"
+        app:layout_constraintBottom_toTopOf="@+id/textView31"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.087"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
