--- a/app/src/main/res/layout/activity_edit_account_employer.xml
+++ b/app/src/main/res/layout/activity_edit_account_employer.xml
@@ -151,12 +151,25 @@
                 android:id="@+id/textEditEmployerAccountDetails"
                 android:layout_width="372dp"
                 android:layout_height="90dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="56dp"
                 android:text="Edit Employer Account Details:"
                 android:textAlignment="center"
                 android:textSize="34sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.487"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/backbuttonEditAccountEmployer"
+                android:layout_width="111dp"
+                android:layout_height="46dp"
+                android:layout_marginTop="8dp"
+                android:text="BACK"
+                app:icon="@android:drawable/ic_menu_revert"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.059"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
