--- a/app/src/main/res/layout/activity_modify_cv.xml
+++ b/app/src/main/res/layout/activity_modify_cv.xml
@@ -59,12 +59,13 @@
                 android:id="@+id/textModifyCVTop"
                 android:layout_width="372dp"
                 android:layout_height="44dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="56dp"
                 android:text="Modify Your CV's Details:"
                 android:textAlignment="center"
                 android:textSize="34sp"
                 android:textStyle="italic"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.512"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -134,6 +135,19 @@
                 android:textSize="20sp"
                 app:layout_constraintStart_toEndOf="@+id/textModifyCVLangKnowledge"
                 app:layout_constraintTop_toTopOf="@+id/textModifyCVLangKnowledge" />
+
+            <Button
+                android:id="@+id/backbuttonModifyCV"
+                android:layout_width="111dp"
+                android:layout_height="50dp"
+                android:text="BACK"
+                app:icon="@android:drawable/ic_menu_revert"
+                app:layout_constraintBottom_toTopOf="@+id/textModifyCVTop"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.013"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="1.0" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
