--- a/app/src/main/res/layout/activity_modify_cv_edit_education.xml
+++ b/app/src/main/res/layout/activity_modify_cv_edit_education.xml
@@ -30,7 +30,7 @@
         app:layout_constraintHorizontal_bias="0.34"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.037" />
+        app:layout_constraintVertical_bias="0.086" />
 
     <Button
         android:id="@+id/btnModifyCVEditEducationAddNew"
@@ -53,4 +53,17 @@
         android:textStyle="italic"
         app:layout_constraintBottom_toTopOf="@+id/recyclerViewModifyCVEditEducation"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/backbuttonModifyCVEditEducation"
+        android:layout_width="116dp"
+        android:layout_height="43dp"
+        android:text="BACK"
+        app:icon="@android:drawable/ic_menu_revert"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.016"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.466" />
 </androidx.constraintlayout.widget.ConstraintLayout>
