--- a/app/src/main/res/layout/activity_edit_req_work_experience.xml
+++ b/app/src/main/res/layout/activity_edit_req_work_experience.xml
@@ -2,8 +2,71 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/backbuttonEditReqWorkExperience"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.ManageJobPositions.ChangeJobDetails.EditReqWorkExperience.EditReqWorkExperienceActivity">
+
+    <TextView
+        android:id="@+id/textView50"
+        android:layout_width="368dp"
+        android:layout_height="78dp"
+        android:text="Edit Required Work Experience for this Job"
+        android:textAlignment="center"
+        android:textSize="34sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.348"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.096" />
+
+    <TextView
+        android:id="@+id/textView49"
+        android:layout_width="226dp"
+        android:layout_height="65dp"
+        android:layout_marginBottom="24dp"
+        android:text="Click on any item to change it"
+        android:textSize="16sp"
+        android:textStyle="italic"
+        app:layout_constraintBottom_toTopOf="@+id/EditReqWorkExpRecyclerView"
+        app:layout_constraintEnd_toStartOf="@+id/EditReqWorkExpAddNewButton"
+        app:layout_constraintHorizontal_bias="0.64"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/EditReqWorkExpRecyclerView"
+        android:layout_width="355dp"
+        android:layout_height="465dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/EditReqWorkExpAddNewButton"
+        android:layout_width="154dp"
+        android:layout_height="69dp"
+        android:layout_marginBottom="12dp"
+        android:text="Add New"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/EditReqWorkExpRecyclerView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.996"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="129dp"
+        android:layout_height="56dp"
+        android:text="BACK"
+        app:icon="@android:drawable/ic_menu_revert"
+        app:layout_constraintBottom_toTopOf="@+id/textView50"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.056"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
