--- a/app/src/main/res/layout/activity_update_job_applications.xml
+++ b/app/src/main/res/layout/activity_update_job_applications.xml
@@ -25,6 +25,8 @@
         android:layout_width="389dp"
         android:layout_height="513dp"
         android:layout_marginTop="24dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/textView60"
         app:layout_constraintTop_toBottomOf="@+id/textView60" />
 
