renamed files to shorten names

--- a/app/src/main/res/layout/activity_change_req_work_experience.xml
+++ b/app/src/main/res/layout/activity_change_req_work_experience.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.ManageJobPositions.ChangeJobDetails.EditReqWorkExperience.ChangeReqWorkExperienceDetails.ChangeReqWorkExperienceDetailsActivity">
+    tools:context=".view.ManageJobPositions.ChangeJobDetails.EditReqWorkExperience.ChangeReqWorkExpDetails.ChangeReqWorkExpDetailsActivity">
 
     <TextView
         android:id="@+id/textView58"
